UrlReference CRUD provided

--- a/app/user/addcodesnippet/addCodeSnippet.html
+++ b/app/user/addcodesnippet/addCodeSnippet.html
@@ -17,6 +17,11 @@
             <textarea id="codeSnip" class="form-control" rows="10" cols="100" ng-model="codeSnip"></textarea>
         </div>
         <div class="form-group col-md-10">
+                <label for="codeSnip"> URL Reference </label>
+                <input id="urlreference" class="form-control" type="text" ng-model="urlreference">
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="form-group col-md-10">
             <center>
                 <button type="button" class="btn btn-primary" ng-click="addCodeSnippet();">Submit</button>
                  <button type="button" class="btn btn-primary" ng-click="Back();">Back</button>
