--- a/app/user/codesnippets/listCodeSnippets.html
+++ b/app/user/codesnippets/listCodeSnippets.html
@@ -22,7 +22,7 @@
     <br>
     <div class="row">
         <div class="col-sm-12 table-responsive" ng-init="GetMyCodeSnippets();">
-            <div style="height:300px; border:solid 2px #082a12;">
+            <div class="viewheight" style="border:solid 2px #082a12;">
                 <div class="table table-condensed">
                     <div class="bg-success">
                         <div class="column col-sm-10">
