--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,18 @@
     <script src="user/language/languageController.js"></script>
     <script src="admin/adminController.js"></script>
 
+    <style>
+        div.viewheight{
+            height: 350px;
+        }
+        div.codesnippetdetailheight{
+            height: 350px;
+        }
+        pre.codesnippetdetailheight{
+            height: 350px;
+        }
+    </style>
+
 </head>
 
 <body ng-app="codeSnip">
@@ -48,7 +60,7 @@
                 </div>
             </div>
         </div>
-        <div class="row" style="background:#94cdc4; height:470px;">
+        <div class="row" style="background:#94cdc4; height:540px;">
             <div class="col-sm-2" ng-controller="languageController">
                 <div class="row">&nbsp;</div>
                 <h4><label><u>Filter by Category</u></label></h4>
@@ -116,7 +128,7 @@
                         </div>
                 </div>
             </div>
-            <div class="col-sm-10" style="background:#94cdc4">
+            <div class="col-sm-10" style="background:#94cdc4;">
                 <div ng-view></div>
             </div>
         </div>
