--- a/app/user/codesnippetdetail/editCodeSnipDetail.html
+++ b/app/user/codesnippetdetail/editCodeSnipDetail.html
@@ -1,25 +1,31 @@
 <div ng-controller="codeSnipDetailController" class="container-fluid">
-    <div class="row">&nbsp;</div>
-    <div class="row">
+    <form>
+            <div class="row">&nbsp;</div>
             <div class="form-group col-md-2">
-                    <select id="language" class="form-control" ng-model="snipDetail.language" title="Select Language">
-                        <option ng-repeat="language in languages" value="{{language.languageName}}">{{language.languageName}}</option>
-                    </select>
+                <label for="language">Category</label>
+                <select id="language" class="form-control" ng-model="snipDetail.language" title="Select Category">
+                    <option value="">Select</option>
+                    <option ng-repeat="language in languages" value="{{language.languageName}}">{{language.languageName}}</option>
+                </select>
             </div>
-            <div class="col-md-8">
-                <input type="text" class="form-control" ng-model="snipDetail.title"></input>
+            <div class="form-group col-md-8">
+                <label for="title"> Title </label>
+                <input id="title" class="form-control" type="text" ng-model="snipDetail.title">
             </div>
-        </div>
-        <div class="row" style="height:320px;overflow:scroll;">
-            <div class="col-sm-12">
-                <textarea type="text" class="form-control" cols="120" rows="20" ng-model="snipDetail.codesnippet"></textarea>
+            <div class="form-group col-md-10">
+                <label for="codeSnip"> Code Snippet </label>
+                <textarea id="codeSnip" class="form-control" rows="10" cols="100" ng-model="snipDetail.codesnippet"></textarea>
             </div>
-        </div>
-        <div class="row">&nbsp;</div>
-        <div class="form-group col-md-10">
-            <div class="col-sm-12" align="center">
-                <button type="button" class="btn btn-primary" ng-click="Update();">Update</button>
-                <a class="btn btn-primary" href="#snipDetail/{{_id}}">Back</a>
+            <div class="form-group col-md-10">
+                    <label for="codeSnip"> URL Reference </label>
+                    <input id="urlreference" class="form-control" type="text" ng-model="snipDetail.urlreference">
             </div>
-        </div>
+            <div class="row">&nbsp;</div>
+            <div class="form-group col-md-10">
+                <center>
+                    <button type="button" class="btn btn-primary" ng-click="Update();">Update</button>
+                    <a class="btn btn-primary" href="#snipDetail/{{_id}}">Back</a>
+                </center>
+            </div>
+        </form>
 </div>
