removed extra files and clean up

--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,15 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-route.js"></script>
     <script data-require="ui-bootstrap@*" data-semver="0.12.1" src="https://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.12.1.min.js"></script>
     
+    <script type="text/javascript" src="config.json"></script>
+
     <script src="scripts/adal.js"></script>
     <script src="scripts/adal-angular.js"></script> 
     <script src="app.js"></script>
     <script src="user/home/homeService.js"></script>
     <script src="user/home/homeController.js"></script>
-    <script src="scripts/config.js"></script>
+    
+    <!-- <script src="scripts/config.js"></script> -->
 
     <script src="user/addcodesnippet/addCodeSnippetService.js"></script>
     <script src="user/addcodesnippet/addCodeSnippetController.js"></script>
