modified admin page, link to header

--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -1,10 +1,32 @@
 <div class="container-fluid" ng-controller="adminController">
     <div class="row">&nbsp;</div>
-    <div class="row">
-            <h4><b><a href="#manageCategories">Manage Categories</a></b></h4>
-        </div>
-    <div class="row">
-        <h4><b><a href="#reviewcodesnippet">Review Code Snippets</a></b></h4>
-    </div>
-
+    <table class="table table-condensed table-responsive table-bordered">
+        <thead>
+                <h4><b>Admin Actions</b></h4>
+        </thead>
+        <tr class="row">
+            <td>
+                <h4><b><a href="#manageCategories">Manage Categories</a></b></h4>
+            </td>
+            <td>
+                <h4><b><a href="#reviewcodesnippet">Review Code Snippets</a></b></h4>
+            </td>
+        </tr>   
+        <tr class="row">
+                <td>
+                    <h4><b><a href="#manageCategories">Manage Users</a></b></h4>
+                </td>
+                <td>
+                    <h4><b><a href="#reviewcodesnippet">Create Org Account</a></b></h4>
+                </td>
+        </tr>   
+        <tr class="row">
+                <td>
+                    <h4><b><a href="#manageCategories">Add users to Org Account</a></b></h4>
+                </td>
+                <td>
+                    <h4><b><a href="#reviewcodesnippet">Delete Users from Org Account</a></b></h4>
+                </td>
+        </tr>   
+    </table>
 </div>
