--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
         <div class="row" style="background:#082c42" ng-controller="homeController">
             <div class="col-md-4"></div>
             <div class="column col-md-4">`
-                <div class="page-header"><h2><b><center> <font color="white">Code Snippets</font> </div> </center> </b> </h2>
+                <div class="page-header"><h2><b><center><a href="#/" style="color: white; text-decoration: none">Code Snippets</a></font> </div> </center> </b> </h2>
             </div>
             <div class="col-md-1"></div>
             <div class="column col-md-3">
