made main table responsive in listcodesnippet page

--- a/app/user/codesnippets/listCodeSnippets.html
+++ b/app/user/codesnippets/listCodeSnippets.html
@@ -7,7 +7,7 @@
      };
 </script>
 
-<div class="container-fluid" ng-controller="listCodeSnippetsController">
+<div class="container-fluid table-responsive" ng-controller="listCodeSnippetsController">
     <div class="row">&nbsp;</div>
 
     <div class="row">
