Changed class to suit for mobile devices

--- a/app/admin/codesnippets/reviewcodesnippets.html
+++ b/app/admin/codesnippets/reviewcodesnippets.html
@@ -3,11 +3,11 @@
     <div class="row">&nbsp;</div>
 
     <div class="row">
-        <div class="col-md-5">
+        <div class="col-sm-5">
             <input type="text" class="form-control" id="SearchInput" ng-model="SearchText"></input>
         </div>
-        <div class="col-md-1"><button class="btn btn-primary" id="SearchButton" ng-click="SearchCodeSnippets();">Search</button> </div>
-        <div class="col-md-6" align="right">
+        <div class="col-sm-1"><button class="btn btn-primary" id="SearchButton" ng-click="SearchCodeSnippets();">Search</button> </div>
+        <div class="col-sm-6" align="right">
             <h4><b><a href="#addSnip">Add Code Snippet</a></b></h4>
         </div>
     </div>
