--- a/app/login.html
+++ b/app/login.html
@@ -23,7 +23,7 @@
         
         <div class="container">
             <div class="row" style="background:#082c42" ng-controller="homeController">
-                <div class="column col-md-12">`
+                <div class="column col-sm-12">`
                     <div class="page-header"><h2><b><center> <font color="white">Code Snippets</font> </div> </center> </b> </h2>
                 </div>
             </div>
