--- a/app/index.html
+++ b/app/index.html
@@ -48,12 +48,12 @@
 <body ng-app="codeSnip">
     <div class="container">
         <div class="row" style="background:#082c42" ng-controller="homeController">
-            <div class="col-md-4"></div>
-            <div class="column col-md-4">`
+            <div class="col-sm-4"></div>
+            <div class="column col-sm-4">`
                 <div class="page-header"><h2><b><center><a href="#/" style="color: white; text-decoration: none">Code Snippets</a></font> </div> </center> </b> </h2>
             </div>
-            <div class="col-md-1"></div>
-            <div class="column col-md-3">
+            <div class="col-sm-1"></div>
+            <div class="column col-sm-3">
                 <div class="row" align="right">
                     <font color="white"><b><span id="userName1">{{GreetingMessage}}</span></b></font>
                 </div>
@@ -69,9 +69,9 @@
                 <div class="row">&nbsp;</div>
                 <h4><label><u>Filter by Category</u></label></h4>
 
-                <div class="col-md-12">
+                <div class="col-sm-12">
                     <div class="row"> 
-                        <button style="text-align:left" class="btn btn-primary col-md-12" type="button" data-toggle="collapse" data-target="#tools" aria-expanded="false" aria-controls="collapseExample">
+                        <button style="text-align:left" class="btn btn-primary col-sm-12" type="button" data-toggle="collapse" data-target="#tools" aria-expanded="false" aria-controls="collapseExample">
                             Tools
                         </button>
                     </div>
@@ -83,7 +83,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <button style="text-align:left" class="btn btn-primary col-md-12" type="button" data-toggle="collapse" data-target="#languages" aria-expanded="false" aria-controls="collapseExample">
+                        <button style="text-align:left" class="btn btn-primary col-sm-12" type="button" data-toggle="collapse" data-target="#languages" aria-expanded="false" aria-controls="collapseExample">
                             Languages
                         </button>
                     </div>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                     <div class="row">
-                        <button style="text-align:left" class="btn btn-primary col-md-12" type="button" data-toggle="collapse" data-target="#frameworks" aria-expanded="false" aria-controls="collapseExample">
+                        <button style="text-align:left" class="btn btn-primary col-sm-12" type="button" data-toggle="collapse" data-target="#frameworks" aria-expanded="false" aria-controls="collapseExample">
                             Frameworks
                         </button>
                     </div>
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                     <div class="row">
-                        <button style="text-align:left" class="btn btn-primary col-md-12" type="button" data-toggle="collapse" data-target="#libraries" aria-expanded="false" aria-controls="collapseExample">
+                        <button style="text-align:left" class="btn btn-primary col-sm-12" type="button" data-toggle="collapse" data-target="#libraries" aria-expanded="false" aria-controls="collapseExample">
                             Libraries
                         </button>
                     </div>
@@ -119,7 +119,7 @@
                             </div>
                     </div>
                     <div class="row">
-                            <button style="text-align:left" class="btn btn-primary col-md-12" type="button" data-toggle="collapse" data-target="#others" aria-expanded="false" aria-controls="collapseExample">
+                            <button style="text-align:left" class="btn btn-primary col-sm-12" type="button" data-toggle="collapse" data-target="#others" aria-expanded="false" aria-controls="collapseExample">
                                 Others
                             </button>
                         </div>
