--- a/app/user/codesnippetdetail/codeSnipDetail.html
+++ b/app/user/codesnippetdetail/codeSnipDetail.html
@@ -1,6 +1,6 @@
 <div class="viewheight" ng-controller="codeSnipDetailController" class="container-fluid">
         <div class="row">
-            <div class="col-md-12"><h3>{{snipDetail.title}}</h3></div>
+            <div class="col-sm-12"><h3>{{snipDetail.title}}</h3></div>
         </div>
         <div class="row">&nbsp;</div>
         <div class="row" style="overflow:scroll;">
@@ -17,7 +17,7 @@
             </div>
         </div>
         <div class="row">&nbsp;</div>
-        <div class="form-group col-md-10">
+        <div class="form-group col-sm-10">
             <div class="col-sm-12" align="center">
                 <a class="btn btn-primary" href="#editSnipDetail/{{_id}}">Edit</a>
                 <button type="button" class="btn btn-primary" ng-click="Delete();">Delete</button>
