added and used boldHeader css class

--- a/app/user/codesnippets/listCodeSnippets.html
+++ b/app/user/codesnippets/listCodeSnippets.html
@@ -15,8 +15,8 @@
             <input type="text" class="form-control" id="SearchInput" ng-model="SearchText"></input>
         </div>
         <div class="col-sm-1"><button class="btn btn-primary" id="SearchButton" ng-click="SearchCodeSnippets();">Search</button> </div>
-        <div class="col-sm-6" align="right">
-            <h4><b><a href="#addSnip">Add Code Snippet</a></b></h4>
+        <div class="col-sm-6 boldHeader" align="right">
+            <a href="#addSnip">Add Code Snippet</a>
         </div>
     </div>
     <br>
