--- a/app/index.html
+++ b/app/index.html
@@ -41,6 +41,11 @@
         pre.codesnippetdetailheight{
             height: 300px;
         }
+
+        .boldHeader{
+            font-weight: bold;
+            font-size:18px
+        }
     </style>
 
 </head>
