--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <title> CodeSnippets! </title>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous" />
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -135,7 +135,7 @@
                                     </a>
                                 </div>
                         </div>
-                </div>
+                    </div>
             </div>
             <div class="col-sm-10" style="background:#94cdc4;">
                 <div ng-view></div>
