--- a/app/user/codesnippetdetail/codeSnipDetail.html
+++ b/app/user/codesnippetdetail/codeSnipDetail.html
@@ -1,27 +1,40 @@
 <div class="viewheight" ng-controller="codeSnipDetailController" class="container-fluid">
+    <div class="table">
         <div class="row">
-            <div class="col-sm-12"><h3>{{snipDetail.title}}</h3></div>
+            <div class="col-sm-10"><h3>{{snipDetail.title}}</h3></div>
         </div>
         <div class="row">&nbsp;</div>
-        <div class="row" style="overflow:scroll;">
-            <div class="col-sm-12" class="codesnippetdetailheight">
-                <pre class="codesnippetdetailheight">{{snipDetail.codesnippet}}</pre>
+        <div class="row">
+            <div class="col-sm-10" class="codesnippetdetailheight">
+                <pre style="overflow:scroll;" class="codesnippetdetailheight">{{snipDetail.codesnippet}}</pre>
             </div>
         </div>
         <div class="row">
             <div class="col-sm-2">
-                <h4>Url Reference:</h4>
+                <label> Url Reference: </label>
             </div>
-            <div class="col-sm-10">
+            <div class="col-sm-8" style="text-align: left;">
                 <h5><a href="{{snipDetail.urlreference}}">{{snipDetail.urlreference}}</a></h5>
             </div>
         </div>
         <div class="row">&nbsp;</div>
-        <div class="form-group col-sm-10">
-            <div class="col-sm-12" align="center">
-                <a class="btn btn-primary" href="#editSnipDetail/{{_id}}">Edit</a>
-                <button type="button" class="btn btn-primary" ng-click="Delete();">Delete</button>
-                <button type="button" class="btn btn-primary" ng-click="Back();">Back</button>
-            </div>
+        <div class="row">
+                <div class="form-inline col-sm-10">
+                    <label for="tags" style="width:150px">Tags (Labels)</label>                    
+                    <button type="button" class="btn btn-default btn-sm" ng-repeat="tag in tags" ng-model="tags">
+                            <span class="glyphicon"></span> {{ tag }} 
+                    </button>
+                </div>
         </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="form-group col-sm-10">
+                <div class="col-sm-10" align="center">
+                    <a class="btn btn-primary" href="#editSnipDetail/{{_id}}">Edit</a>
+                    <button type="button" class="btn btn-primary" ng-click="Delete();">Delete</button>
+                    <button type="button" class="btn btn-primary" ng-click="Back();">Back</button>
+                </div>
+            </div>
+        </div>    
+    </div>
 </div>
