Expanded layout of app to fit full screen

--- a/app/admin/admin.html
+++ b/app/admin/admin.html
@@ -17,7 +17,7 @@
                     <h4><b><a href="#manageCategories">Manage Users</a></b></h4>
                 </td>
                 <td>
-                    <h4><b><a href="#reviewcodesnippet">Create Org Account</a></b></h4>
+                    <h4><b><a href="#reviewcodesnippet">Manage Organizations</a></b></h4>
                 </td>
         </tr>   
         <tr class="row">
