--- a/app/user/codesnippetdetail/codeSnipDetail.html
+++ b/app/user/codesnippetdetail/codeSnipDetail.html
@@ -21,8 +21,8 @@
         <div class="row">
                 <div class="form-inline col-sm-12">
                     <label for="tags" style="width:150px">Tags (Labels)</label>                    
-                    <button type="button" class="btn btn-default btn-sm" ng-repeat="tag in tags" ng-model="tags">
-                            <span class="glyphicon"></span> {{ tag }} 
+                    <button type="button" style="margin: 2px;" class="btn btn-primary btn-xs" ng-repeat="tag in tags" ng-model="tags">
+                        {{ tag }}
                     </button>
                 </div>
         </div>
