--- a/app/index.html
+++ b/app/index.html
@@ -86,6 +86,18 @@
                 <h4><label><u>Filter by Category</u></label></h4>
 
                 <div class="col-sm-12">
+                    <div class="row">
+                        <button style="text-align:left" class="btn btn-primary col-sm-12" type="button" data-toggle="collapse" data-target="#languages" aria-expanded="false" aria-controls="collapseExample">
+                            Languages
+                        </button>
+                    </div>
+                    <div class="collapse.show" id="languages">
+                            <div class="card card-body">
+                                <a href="" ng-repeat="language in Languages" ng-click="GetCodeSnippetsByLanguage(language.languageName);">
+                                    <h5><b>{{language.languageName}}</b></h5>
+                                </a>
+                            </div>
+                    </div>                    
                     <div class="row"> 
                         <button style="text-align:left" class="btn btn-primary col-sm-12" type="button" data-toggle="collapse" data-target="#tools" aria-expanded="false" aria-controls="collapseExample">
                             Tools
@@ -98,18 +110,7 @@
                             </a>
                         </div>
                     </div>
-                    <div class="row">
-                        <button style="text-align:left" class="btn btn-primary col-sm-12" type="button" data-toggle="collapse" data-target="#languages" aria-expanded="false" aria-controls="collapseExample">
-                            Languages
-                        </button>
-                    </div>
-                    <div class="collapse" id="languages">
-                            <div class="card card-body">
-                                <a href="" ng-repeat="language in Languages" ng-click="GetCodeSnippetsByLanguage(language.languageName);">
-                                    <h5><b>{{language.languageName}}</b></h5>
-                                </a>
-                            </div>
-                        </div>
+                    
                     <div class="row">
                         <button style="text-align:left" class="btn btn-primary col-sm-12" type="button" data-toggle="collapse" data-target="#frameworks" aria-expanded="false" aria-controls="collapseExample">
                             Frameworks
