--- a/app/user/codesnippets/listCodeSnippets.html
+++ b/app/user/codesnippets/listCodeSnippets.html
@@ -21,7 +21,7 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-sm-12 table-responsive" ng-init="GetMyCodeSnippets();">
+        <div class="col-sm-12 table-responsive" ng-init="GetCodeSnippets();">
             <div class="viewheight" style="border:solid 2px #082a12;">
                 <div class="table table-condensed">
                     <div class="bg-success">
