code cleanup & css changes for better look & feel

--- a/app/user/codesnippets/listCodeSnippets.html
+++ b/app/user/codesnippets/listCodeSnippets.html
@@ -22,7 +22,7 @@
     <br>
     <div class="row">
         <div class="col-sm-12 table-responsive" ng-init="GetCodeSnippets();">
-            <div class="viewheight" style="border:solid 2px #082a12;">
+            <div  style="border:solid 2px #082a12;">
                 <div class="table table-condensed">
                     <div class="bg-success">
                         <div class="column col-sm-7">
@@ -36,7 +36,6 @@
                         </div>
                     </div>
 
-                    <div class="row">&nbsp;</div>
                     <div class="row">&nbsp;</div>
 
                     <div class="row" ng-repeat="snip in codeSnippets">
