--- a/app/index.html
+++ b/app/index.html
@@ -31,9 +31,6 @@
         <script src="admin/adminController.js"></script>
 
         <style>
-            div.viewheight{
-                height: 320px;
-            }
             div.codesnippetdetailheight{
                 height: 250px;
             }
@@ -64,7 +61,7 @@
     <body ng-app="codeSnip">
         <div class="row PageHeaderBackgroundColor" ng-controller="homeController">
             <div class="col-sm-4"></div>
-            <div class="column col-sm-4">`
+            <div class="column col-sm-4">
                 <div class="page-header"><h2><b><center><a href="#/" style="color: white; text-decoration: none">Code Snippets</a></font> </div> </center> </b> </h2>
             </div>
             <div class="col-sm-1"></div>
@@ -80,7 +77,7 @@
             </div>
         </div>
 
-        <div class="row" style="height:540px;">
+        <div class="row">
             <div class="SideLayoutBackgroundColor col-sm-2" ng-controller="languageController">
                 <div class="row">&nbsp;</div>
                 <h4><label><u>Filter by Category</u></label></h4>
@@ -103,7 +100,7 @@
                             Tools
                         </button>
                     </div>
-                    <div class="collapse" id="tools">
+                    <div class="collapse.show" id="tools">
                         <div class="card card-body">
                             <a href="" ng-repeat="tool in Tools" ng-click="GetCodeSnippetsByLanguage(tool.languageName);">
                                 <h5><b>{{tool.languageName}}</b></h5>
@@ -116,7 +113,7 @@
                             Frameworks
                         </button>
                     </div>
-                    <div class="collapse" id="frameworks">
+                    <div class="collapse.show" id="frameworks">
                             <div class="card card-body">
                                 <a href="" ng-repeat="framework in Frameworks" ng-click="GetCodeSnippetsByLanguage(framework.languageName);">
                                     <h5><b>{{framework.languageName}}</b></h5>
@@ -128,7 +125,7 @@
                             Libraries
                         </button>
                     </div>
-                    <div class="collapse" id="libraries">
+                    <div class="collapse.show" id="libraries">
                             <div class="card card-body">
                                 <a href="" ng-repeat="library in Libraries" ng-click="GetCodeSnippetsByLanguage(library.languageName);">
                                     <h5><b>{{library.languageName}}</b></h5>
@@ -140,7 +137,7 @@
                                 Others
                             </button>
                         </div>
-                        <div class="collapse" id="others">
+                        <div class="collapse.show" id="others">
                                 <div class="card card-body">
                                     <a href="" ng-repeat="other in Others" ng-click="GetCodeSnippetsByLanguage(other.languageName);">
                                         <h5><b>{{other.languageName}}</b></h5>
