--- a/app/user/codesnippetdetail/codeSnipDetail.html
+++ b/app/user/codesnippetdetail/codeSnipDetail.html
@@ -1,4 +1,4 @@
-<div class="viewheight" ng-controller="codeSnipDetailController" class="container-fluid">
+<div ng-controller="codeSnipDetailController" class="container-fluid">
     <div class="table">
         <div class="row">
             <div class="col-sm-10"><h3><b>{{snipDetail.title}}</b></h3></div>
