--- a/app/user/codesnippetdetail/codeSnipDetail.html
+++ b/app/user/codesnippetdetail/codeSnipDetail.html
@@ -4,7 +4,7 @@
             <div class="col-sm-10"><h3><b>{{snipDetail.title}}</b></h3></div>
             <div class="col-sm-2" align="right" style="padding-top: 15px;">
                 <label>{{codeSnippetVotes.votes}} votes</label>
-                <button type="button" ng-click="voteForCodeSnippet();" class="btn btn-primary btn-xm">Vote</button>
+                <button type="button" ng-click="AddVoteForCodeSnippet();" class="btn btn-primary btn-xm">Vote</button>
             </div>
         </div>
         <div class="row">&nbsp;</div>
@@ -41,13 +41,13 @@
                     <h4><b>Comments</b></h4>
                     
                     <div class="panel-group" style="padding-left: 15px; padding-right: 15;">
-                    <div class="row panel panel-default" ng-repeat="codeSnippetComment in codeSnippetComments">
-                        <div class="col-sm-9" style="padding-left: 0px;">
+                    <div style="border: solid 1px grey;" class="row panel panel-default" ng-repeat="codeSnippetComment in codeSnippetComments">
+                        <div class="col-sm-10" style="padding-left: 0px;">
                             <div class="panel-body">{{codeSnippetComment.comment}}</div>
-                        </div>
-                        <div class="col-sm-1"  style="padding: 15;">
-                            <div>{{codeSnippetComment.userId}}</div>
-                        </div>    
+                        </div>   
+                        <div class="col-sm-2" style="padding: 15px;">
+                            <div align="right">{{codeSnippetComment.userId}}</div>
+                        </div> 
                     </div>
                     </div>
                 </div>
@@ -59,7 +59,8 @@
         <div>
             <div><label><b>Add Comment</b></label></div>
             <div>
-                <textarea id="codeSnipComment" class="form-control" rows="2" cols="100" ng-model="codeSnipComment"></textarea>
+                <textarea style="border: solid 1px black;" id="codeSnipComment" class="form-control" rows="2" cols="100" ng-model="codeSnipComment"></textarea>
+                <div style="height: 5px;">&nbsp;</div>
                 <button type="button" class="btn btn-primary" ng-click="AddComment();">Add</button>
             </div>
         </div>
