--- a/app/user/codesnippetdetail/codeSnipDetail.html
+++ b/app/user/codesnippetdetail/codeSnipDetail.html
@@ -1,7 +1,10 @@
 <div ng-controller="codeSnipDetailController" class="container-fluid">
     <div class="table">
         <div class="row">
-            <div class="col-sm-10"><h3><b>{{snipDetail.title}}</b></h3></div>
+            <div class="col-sm-10">
+                <h3><b>{{snipDetail.title}}</b></h3>
+                by {{snipDetail.userId}} &nbsp;&nbsp; {{snipDetail.createdDate | date}} 
+            </div>
             <div class="col-sm-2" align="right" style="padding-top: 15px;">
                 <label>{{codeSnippetVotes.votes}} votes</label>
                 <button type="button" ng-click="AddVoteForCodeSnippet();" class="btn btn-primary btn-xm">Vote</button>
@@ -42,11 +45,14 @@
                     
                     <div class="panel-group" style="padding-left: 15px; padding-right: 15;">
                     <div style="border: solid 1px grey;" class="row panel panel-default" ng-repeat="codeSnippetComment in codeSnippetComments">
-                        <div class="col-sm-10" style="padding-left: 0px;">
-                            <div class="panel-body">{{codeSnippetComment.comment}}</div>
+                        <div class="col-sm-8">
+                            <div style="padding: 15px;">{{codeSnippetComment.comment}}</div>
                         </div>   
-                        <div class="col-sm-2" style="padding: 15px;">
+                        <div class="col-sm-4">
                             <div align="right">{{codeSnippetComment.userId}}</div>
+                            <div align="right">
+                                <button type="button" ng-show="codeSnippetComment.isEditAllowed" class="btn btn-primary btn-xs" ng-click="DeleteComment(codeSnippetComment._id);">Delete</button>
+                            </div>
                         </div> 
                     </div>
                     </div>
