Collapse panel to test in openshift

--- a/app/index.html
+++ b/app/index.html
@@ -88,7 +88,7 @@
                             Languages
                         </button>
                     </div>
-                    <div class="collapse.show" id="languages">
+                    <div class="collapse" id="languages">
                             <div class="card card-body">
                                 <a href="" ng-repeat="language in Languages" ng-click="GetCodeSnippetsByLanguage(language.languageName);">
                                     <h5><b>{{language.languageName}}</b></h5>
@@ -100,7 +100,7 @@
                             Tools
                         </button>
                     </div>
-                    <div class="collapse.show" id="tools">
+                    <div class="collapse" id="tools">
                         <div class="card card-body">
                             <a href="" ng-repeat="tool in Tools" ng-click="GetCodeSnippetsByLanguage(tool.languageName);">
                                 <h5><b>{{tool.languageName}}</b></h5>
@@ -113,7 +113,7 @@
                             Frameworks
                         </button>
                     </div>
-                    <div class="collapse.show" id="frameworks">
+                    <div class="collapse" id="frameworks">
                             <div class="card card-body">
                                 <a href="" ng-repeat="framework in Frameworks" ng-click="GetCodeSnippetsByLanguage(framework.languageName);">
                                     <h5><b>{{framework.languageName}}</b></h5>
@@ -125,7 +125,7 @@
                             Libraries
                         </button>
                     </div>
-                    <div class="collapse.show" id="libraries">
+                    <div class="collapse" id="libraries">
                             <div class="card card-body">
                                 <a href="" ng-repeat="library in Libraries" ng-click="GetCodeSnippetsByLanguage(library.languageName);">
                                     <h5><b>{{library.languageName}}</b></h5>
@@ -137,7 +137,7 @@
                                 Others
                             </button>
                         </div>
-                        <div class="collapse.show" id="others">
+                        <div class="collapse" id="others">
                                 <div class="card card-body">
                                     <a href="" ng-repeat="other in Others" ng-click="GetCodeSnippetsByLanguage(other.languageName);">
                                         <h5><b>{{other.languageName}}</b></h5>
